# elwolf2d

./: .gitignore  CMakeLists.txt  README.md
assets/scripts/: Level1.lua  Level2.lua
libs/: CMakeLists.txt
libs/imgui/backends/: imgui_impl_sdl.h
src/: Main.cpp  main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h  AssetStore.hpp
src/Components/: Animation.hpp  BoxCollider.hpp  CameraFollow.hpp  Enemy.hpp  Health.hpp  KeyboardControlled.hpp  Obstacle.hpp  Projectile.hpp  ProjectileEmitter.hpp  RigidBody.hpp  Script.hpp  Sprite.hpp  TextLabel.hpp  Transform.hpp
src/Events/: Collision.hpp  KeyPressed.hpp
src/Game/: Game.cpp  Game.hpp  LevelLoader.cpp  LevelLoader.hpp
src/Systems/: Animation.hpp  CameraMovement.hpp  Collision.hpp  Damage.hpp  KeyboardControl.hpp  Movement.hpp  ProjectileEmit.hpp  ProjectileLifecycle.hpp  Render.hpp  RenderCollider.hpp  RenderGUI.hpp  RenderHealthBar.hpp  RenderText.hpp  Script.hpp  todo.txt
src/components/: sprite.hpp  transform.hpp
src/game/: LevelLoader.cpp  LevelLoader.h  game.cpp  game.h
src/systems/: render.hpp
